ocaml/testsuite/tests/parse-errors/optional_tuple_component2.compilers.reference
File "optional_tuple_component2.ml", line 8, characters 3-10:
8 | ~~(y, ?x:2)
       ^^^^^^^
Error: Tuple components cannot be optional
